<resources>
    <string name="app_name">Symphony</string>
    <string name="title_home">Featured Music</string>
    <string name="title_music">Posts</string>
    <string name="title_events">Events</string>
    <string name="upload_new">New Upload</string>
    <string name="web_client_id">869046089685-nhpb76tkubtmuplai7p6gg420n5aeuq1.apps.googleusercontent.com</string>
    <string name="email_password">Email/Password</string>
    <string name="sign_in">Log in to Symphony via: </string>
    <string name="sign_up">Sign-up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="sign_up_pass_error_2">Make sure both passwords match</string>
    <string name="post_new">New Post</string>
    <string name="post_new_title">Title</string>
    <string name="post_new_body">What would you like to say?</string>
    <string name="post_img_desc">Add image</string>
    <string name="sign_up_name">Name</string>
    <string name="tos">Symphony is a public music sharing app for fans and creators. You agree that
    all content MUST be original. Uploading copyrighted content is forbidden and subject to account removal and
    information being handed over to federal prosecutors if Symphony is contacted. Symphony stores your location
    to allow other users to discover your content. Your exact location is NEVER shared with other users
    and is only stored on the server as a means to make the app location aware. No location logging is enabled and
    only your most recent location is stored on our systems. Previous entries are removed on each location update.
    For more about privacy please see:
        <a href="https://symphony-app.flycricket.io/privacy.html">
        Privacy Policy</a>
    </string>

    <string name="terms_accept">I Accept</string>
    <string name="terms_decline">I Decline</string>
    <string name="song_play_iv">Play Song</string>
    <string name="song_like">Like Song</string>
    <string name="artists">Artists</string>
    <string name="upload">Upload</string>
    <string name="upload_dialog_song_title">Song Title</string>
    <string name="player_start_time">00:00</string>
    <string name="player_max_time">99:99</string>
    <string name="player_full_screen">Fullscreen</string>
    <string name="post_submit">Submit</string>
    <string name="search">Search</string>
    <string name="deleted_song">Deleted</string>
    <string name="hidden_song">Hidden</string>
    <string name="location_permission_req">We need location permissions</string>
    <string name="channel_name">Location Update</string>
    <string name="channel_description">Location Notification Chanel</string>
    <string name="acq_loc">Acquiring location</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="posts">Posts</string>
    <string name="songs">Songs</string>
    <string name="username">Username</string>
    <string name="member_since">Member since: \n%s</string>
    <string name="song_count">%d Songs</string>
    <string name="likes_count">%d Likes</string>
    <string name="member_standard">Standard Member</string>
    <string name="back_action">Back</string>
    <string name="post_add_err">Unable to add your post. Please try again.</string>
    <string name="account_type">%s  Member</string>
</resources>
